feat: adding links to the expense in the email body

--- a/api/lang/pt_BR.json
+++ b/api/lang/pt_BR.json
@@ -157,5 +157,6 @@
     "Expense replicated": "Despesa duplicada",
     "The expense `:name` has expired": "A despesa `:name` venceu",
     "The expense `:name` was paid automatically by our system": "A despesa `:name` foi paga automaticamente por nosso sistema",
-    "The expense `:name` was replicated automatically by our system": "A despesa `:name` foi duplicada automaticamente por nosso sistema"
+    "The expense `:name` was replicated automatically by our system": "A despesa `:name` foi duplicada automaticamente por nosso sistema",
+    "Go to expense": "Acessar despesa"
 }
